force-app/main/default/objects/OrderDish__c/OrderDish__c.object-meta.xml
<CustomObject>
    <label>Order Dish</label>
    <nameField>
        <label>OrderDish Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderDishes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>