force-app/main/default/objects/OrderDish__c/fields/DishId__c.field-meta.xml
<CustomField>
    <fullName>DishId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DishId</label>
    <referenceTo>Dish__c</referenceTo>
    <relationshipLabel>OrderDishes</relationshipLabel>
    <relationshipName>OrderDishes</relationshipName>
    <type>Lookup</type>
</CustomField>