force-app/main/default/objects/OrderDish__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>OrderId</label>
    <referenceTo>Restaurant_Order__c</referenceTo>
    <relationshipLabel>OrderDishes</relationshipLabel>
    <relationshipName>OrderDishes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>